--- a/model.ipynb
+++ b/model.ipynb
@@ -502,7 +502,7 @@
       },
       "outputs": [],
       "source": [
-        "class YOLOHeadLite_P4Only(nn.Module):\n",
+        "class YOLOHeadLite(nn.Module):\n",
         "    def __init__(self, in_ch=256, num_classes=1):\n",
         "        super().__init__()\n",
         "        c = in_ch\n",
@@ -885,9 +885,9 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "V5E1"
+      "gpuType": "T4"
     },
-    "accelerator": "TPU"
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 5
