--- a/model.ipynb
+++ b/model.ipynb
@@ -676,55 +676,67 @@
     {
       "cell_type": "code",
       "source": [
-        "import torch\n",
-        "import torch.nn.functional as F\n",
-        "\n",
         "def yolo_loss(preds, targets, img_size=512):\n",
-        "    object_loss = 0\n",
-        "    class_loss = 0\n",
-        "    box_loss = 0\n",
+        "    cls_pred, obj_pred, box_pred = preds[0]   # only P4\n",
         "\n",
-        "    for scale_id, (cls_pred, obj_pred, box_pred) in enumerate(preds):\n",
-        "        B, num_cls, H, W = cls_pred.shape\n",
+        "    B, C, H, W = cls_pred.shape\n",
+        "    device = cls_pred.device\n",
         "\n",
-        "        # ----- flatten -----\n",
-        "        cls_pred = cls_pred.permute(0,2,3,1).reshape(B, -1, num_cls)     # [B, H*W, C]\n",
-        "        obj_pred = obj_pred.permute(0,2,3,1).reshape(B, -1, 1)           # [B, H*W, 1]\n",
-        "        box_pred = box_pred.permute(0,2,3,1).reshape(B, -1, 4)           # [B, H*W, 4]\n",
+        "    # reshape\n",
+        "    cls_pred = cls_pred.permute(0,2,3,1).reshape(B, H*W, C)\n",
+        "    obj_pred = obj_pred.permute(0,2,3,1).reshape(B, H*W, 1)\n",
+        "    box_pred = box_pred.permute(0,2,3,1).reshape(B, H*W, 4)\n",
         "\n",
-        "        obj_pred = obj_pred.sigmoid()\n",
-        "        cls_pred = cls_pred.sigmoid()\n",
+        "    # losses\n",
+        "    obj_loss = 0.0\n",
+        "    cls_loss = 0.0\n",
+        "    box_loss = 0.0\n",
         "\n",
-        "        # ----- iterate batch -----\n",
-        "        for b in range(B):\n",
-        "            gt = targets[b]\n",
+        "    # stride\n",
+        "    stride = img_size // H     # 512/32 = 16\n",
         "\n",
-        "            if len(gt) == 0:\n",
-        "                # object 없음 → obj는 0이어야 함\n",
-        "                object_loss += (obj_pred[b] ** 2).mean()\n",
-        "                continue\n",
+        "    for b in range(B):\n",
+        "        gt = targets[b]\n",
+        "        if len(gt) == 0:\n",
+        "            # no objects → obj should be 0\n",
+        "            obj_loss += F.binary_cross_entropy_with_logits(obj_pred[b], torch.zeros_like(obj_pred[b]))\n",
+        "            continue\n",
         "\n",
-        "            # object 있음 → obj는 1이어야 함\n",
-        "            object_loss += ((1 - obj_pred[b]) ** 2).mean()\n",
+        "        # assign GT to grid cell\n",
+        "        gcls = gt[:, 0].long()\n",
+        "        gxy  = gt[:, 1:3] * img_size       # center (pixels)\n",
+        "        gwh  = gt[:, 3:5] * img_size       # w,h (pixels)\n",
         "\n",
-        "            # ----- class loss -----\n",
-        "            tcls = gt[:, 0].long()        # class index\n",
-        "            class_loss += F.cross_entropy(\n",
-        "                cls_pred[b],\n",
-        "                tcls.expand(cls_pred[b].shape[0]),\n",
-        "                reduction='mean'\n",
-        "            )\n",
+        "        # grid index\n",
+        "        gx = (gxy[:, 0] / stride).long().clamp(0, W-1)\n",
+        "        gy = (gxy[:, 1] / stride).long().clamp(0, H-1)\n",
+        "        gi = gy * W + gx                   # flatten index\n",
         "\n",
-        "            # ----- box loss (L1) -----\n",
-        "            # GT scaled to pixels\n",
-        "            tbox = gt[:, 1:].clone()\n",
-        "            tbox = tbox * img_size        # [xywh normalized → pixel]\n",
+        "        # -------------------------------\n",
+        "        # objectness loss\n",
+        "        # -------------------------------\n",
+        "        obj_tgt = torch.zeros((H*W,1), device=device)\n",
+        "        obj_tgt[gi] = 1.0\n",
+        "        obj_loss += F.binary_cross_entropy_with_logits(obj_pred[b], obj_tgt)\n",
         "\n",
-        "            pred_box = box_pred[b][:len(gt)] * img_size\n",
+        "        # -------------------------------\n",
+        "        # class loss\n",
+        "        # -------------------------------\n",
+        "        cls_tgt = torch.zeros((H*W, C), device=device)\n",
+        "        cls_tgt[gi, gcls] = 1.0\n",
+        "        cls_loss += F.binary_cross_entropy_with_logits(cls_pred[b], cls_tgt)\n",
         "\n",
-        "            box_loss += F.l1_loss(pred_box, tbox, reduction='mean')\n",
+        "        # -------------------------------\n",
+        "        # box loss (L1)\n",
+        "        # -------------------------------\n",
+        "        # box_pred is raw, model must output normalized xywh (0~1)\n",
+        "        # if not, scale accordingly\n",
+        "        pred = box_pred[b][gi]     # num_gt x 4\n",
+        "        tgt  = torch.cat([gxy, gwh], dim=1) / img_size   # normalize to 0~1\n",
         "\n",
-        "    total = object_loss + class_loss + box_loss\n",
+        "        box_loss += F.l1_loss(pred, tgt, reduction='mean')\n",
+        "\n",
+        "    total = obj_loss + cls_loss + box_loss\n",
         "    return total\n"
       ],
       "metadata": {
@@ -772,7 +784,7 @@
         "optimizer = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
         "\n",
         "def simple_yolo_loss(preds, targets):\n",
-        "    return preds[0][0].mean() * 0  # 일단 파이프라인 연결용\n",
+        "    return sum([p[0].mean()*0 for p in preds])\n",
         "\n",
         "EPOCHS = 5\n",
         "\n",
